--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="ad-serv" >
     <head>
-        <title>Socket.IO chat</title>
+        <title>Ad Server</title>
         <style>
             * { box-sizing: border-box; }
             body { font: 13px Helvetica, Arial; }
@@ -15,8 +15,8 @@
             }
 
         </style>
-    </head ng-controller="saveCtrl" >
-    <body  >
+    </head >
+    <body ng-controller="saveCtrl" >
         <ul id="messages"></ul>
         <nav class="navbar navbar-default">
 
@@ -31,8 +31,8 @@
             </ul>
 
         </nav>
-
-        <form ng-submit="submitForm()" class="col-md-3 verticalLine" style="margin-left:90px;">
+        <center>{{msg}}</center>
+        <form  ng-submit="saveNote.submitForm()" class="col-md-3 verticalLine" style="margin-left:90px;">
             <strong >Add/Update Notification</strong>
             <hr/>
             <br/>
@@ -42,7 +42,6 @@
 
         <div class="input-group">
             <input type="text" name="c_name" ng-model="saveNote.c_name" class="form-control" placeholder="Campaign Name">
-{{saveNote.c_name}}
             </div><br/>
 
             <div class="input-group">
@@ -113,9 +112,9 @@
 
 
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js">
-        <link rel="stylesheet" href="http://localhost:3000/clientUI/app/js/mainController.js">
+         <script src="http://localhost:3001/clientUI/app/js/mainController.js"></script>
 
 
 
